fix: add margin to admonition icon for better spacing

--- a/package/src/styles/admonition.css
+++ b/package/src/styles/admonition.css
@@ -14,6 +14,7 @@
       width: 1em;
       height: 1em;
       vertical-align: -0.125em;
+      margin-right: 0.5em;
     }
 
     p {
